OpenRewriteのJava best Practiceレシピ適用