@@ -1,6 +1,5 @@
 package com.example.bff.domain.service.user;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.springframework.dao.DuplicateKeyException;
@@ -18,11 +17,7 @@ import com.example.fw.common.exception.BusinessException;
 
 import lombok.RequiredArgsConstructor;
 
-/**
- * 
- * ユーザ管理機能のサービス実装クラス
- *
- */
+/// ユーザ管理機能のサービス実装クラス
 @Transactional
 @Service
 @RequiredArgsConstructor
@@ -30,9 +25,7 @@ public class UserServiceImpl implements UserService {
     private final UserRepository repository;
     private final PasswordEncoder passwordEncoder;
 
-    /**
-     * ユーザ登録
-     */
+    /// ユーザ登録
     @Override
     public boolean insert(User user) {
         String password = passwordEncoder.encode(user.getPassword());
@@ -44,70 +37,58 @@ public class UserServiceImpl implements UserService {
         }
     }
 
-    /**
-     * カウント用メソッド.
-     */
+    /// カウント用メソッド.
     @Transactional(readOnly = true)
     @Override
     public int count() {
         return repository.count();
     }
 
-    /**
-     * 全件取得用メソッド.
-     */
+    /// 全件取得用メソッド.
     @Override
     @Transactional(readOnly = true)
     public List<User> findAll() {
         return repository.findAll();
     }
 
-    /**
-     * 全件取得（ページネーション）用メソッド.
-     */
+    /// 全件取得（ページネーション）用メソッド.
     @Override
     @Transactional(readOnly = true)
     public Page<User> findAllForPagination(Pageable pageable) {
-        int total = repository.count();
+        var total = repository.count();
         List<User> users;
         if (total > 0) {
             users = repository.findAllForPagination(pageable);
         } else {
-            users = Collections.emptyList();
+            users = List.of();
         }
         return new PageImpl<>(users, pageable, total);
     }
 
-    /**
-     * １件取得用メソッド.
-     */
+    /// １件取得用メソッド.
     @Override
     @Transactional(readOnly = true)
     public User findOne(String userId) {
         return repository.findOne(userId);
     }
 
-    /**
-     * １件更新用メソッド.
-     */
+    /// １件更新用メソッド.
     @Override
     public void updateOne(User user) {
         String password = passwordEncoder.encode(user.getPassword());
         user.setPassword(password);
-        boolean result = repository.updateOne(user);
+        var result = repository.updateOne(user);
         if (!result) {
             throw new BusinessException(MessageIds.W_EX_8008, user.getUserId());
         }
     }
 
-    /**
-     * １件削除用メソッド.
-     */
+    /// １件削除用メソッド.
     @Override
     public void deleteOne(String userId) {
         // TODO:自分のユーザ情報は削除できないようにする
 
-        boolean result = repository.deleteOne(userId);
+        var result = repository.deleteOne(userId);
         if (!result) {
             throw new BusinessException(MessageIds.W_EX_8009, userId);
         }
