@@ -1,15 +1,16 @@
 package com.example.fw.web.page;
 
-import java.util.Collections;
 import java.util.Set;
-
+import org.jspecify.annotations.Nullable;
 import org.thymeleaf.context.IExpressionContext;
 import org.thymeleaf.dialect.IExpressionObjectDialect;
 import org.thymeleaf.expression.IExpressionObjectFactory;
 
+/// Thymeleafのための#pageInfoダイアレクトを定義するクラス
 public class PageInfoDialect implements IExpressionObjectDialect {
+
     private static final String PAGE_INFO_DIALECT_NAME = "pageInfo";
-    private static final Set<String> EXPRESSION_OBJECT_NAMES = Collections.singleton(PAGE_INFO_DIALECT_NAME);
+    private static final Set<String> EXPRESSION_OBJECT_NAMES = Set.of(PAGE_INFO_DIALECT_NAME);
 
     @Override
     public String getName() {
@@ -25,7 +26,8 @@ public class PageInfoDialect implements IExpressionObjectDialect {
             }
 
             @Override
-            public Object buildObject(IExpressionContext context, String expressionObjectName) {
+            public @Nullable Object buildObject(IExpressionContext context,
+                String expressionObjectName) {
                 if (PAGE_INFO_DIALECT_NAME.equals(expressionObjectName)) {
                     return new PageInfo();
                 }
